--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "use-debounce": "^10.0.4",
     "valtio": "^2.1.4"
   },
   "devDependencies": {
