--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.0",
     "dayjs": "^1.11.13",
+    "material-ui-confirm": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "use-debounce": "^10.0.4",
